--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <div class="main-login">
         <div class="left-login">
             <h1>Faça Login<br>E entre para nosso time</h1>
+            <img src="cientista.svg" class="left-login-image" alt="cientista">
         </div>
         <div class="right-login">
             <div class="card-login">
-                <H1>Login</H1>
+                <H1>LOGIN</H1>
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
                     <input type="text" name="usuario" placeholder="Usuário">
